cluster/policies/pods-must-have-app-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pods-must-have-app-label
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["asm-system", "kube-system", "gatekeeper-system", "config-management-system", "resource-group-system"]
  parameters:
    labels:
      - key: "app"
