cluster/policies/require-pod-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-pod-label
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups:
        - ""
        kinds:
        - Pod
    excludedNamespaces:
    - asm-system
    - kube-system
    - gatekeeper-system
    - config-management-system
    - resource-group-system
  parameters:
    labels:
      - key: "app"
